--- a/css/profile.css
+++ b/css/profile.css
@@ -1,7 +1,3 @@
-/* body{
-    background-color: #FBFCFE;
-} */
-
 *{
     border-radius: 15px;
 }
@@ -11,63 +7,73 @@
     margin: 0;
     padding: 0;
     text-align: center;
+    background-color: #f7f7f7;
     display: grid;
     grid-template-columns: 280px 5fr;
-    /* background-color: rgb(117, 102, 102); */
-    /* gap: 15px 15px; */
     justify-content: center;
-    background-color: #ebecee;
 }
 
 .topNav{
     grid-column: 1/6;
-    border: 1px solid green;
     background-color: #fff;
     border-radius: 0;
     height: 95px;
 }
 
 .sideNav{
-    border: 1px solid green;
-    /* background-color: rgb(132, 32, 186); */
-    margin: 5px 10px;
+    border-right: 1px solid green;
+    padding: 20px;
+    border-radius: 0;
 }
 
 .content{
-    margin: 5px 135px;
-    width: 75%;
-    /* background-color: #fff; */
-    grid-template-columns: 1fr 3fr;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-gap: 15px;
+    border-radius: 0;
+    padding: 10px 140px;
 }
 
 .up{
-    grid-column: 1/4;
+    grid-column: 1/3;
     background-color: #FFFFFF;
-    margin: 5px;
-    padding: 10px;
-    height: 380px;
+    margin-top: 5px;
+    height: 430px;
     display: grid;
-    grid-template-rows: 5fr 1fr 1fr;
+    grid-template-rows: 6fr 2fr 1fr;
+    box-shadow: 0 8px 30px rgba(0,0,0,.05)
 }
 .bgImg{
     background-image: url("../images/u-bg.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     outline:2px #f1f1f1;
-    margin: 5px;
+    margin: 1rem;
 }
 
 .user,.nav{
-    border: 1px solid green;
-    margin: 5px;
+    border-radius: 0;
+}
+.nav{
+    border-top: 1px solid #f1f1f1;
 }
 
 .left,.right{
     background-color: #FFFFFF;
-    margin: 5px;
     padding: 40px;
+    box-shadow: 0 8px 30px rgba(0,0,0,.05)
 }
-.left{
-    grid-column: 1/2;
+
+.right,.left{
+    display: grid;
+    grid-template-rows: 300px;
+    gap: 15px;
+    box-shadow: 0 8px 30px rgba(0,0,0,.05)
+}
+
+.right>.post,.left>.data{
+    background-color: #FFFFFF;
+    padding: 40px;
+    box-shadow: 0 8px 30px rgba(0,0,0,.05)
 }
 
