--- a/css/profile.css
+++ b/css/profile.css
@@ -2,11 +2,19 @@
     border-radius: 15px;
 }
 
+html{
+    font-family: 'Montserrat';
+}
+
+a{
+    text-decoration: none;
+    color:rgb(84, 81, 81);
+}
+
 .container{
     border-radius: 0;
     margin: 0;
     padding: 0;
-    text-align: center;
     background-color: #f7f7f7;
     display: grid;
     grid-template-columns: 280px 5fr;
@@ -18,12 +26,25 @@
     background-color: #fff;
     border-radius: 0;
     height: 95px;
+    position: fixed;
+    width: 100%;
+    box-shadow: 0 .5rem 1rem rgba(0,0,0,.03)
 }
 
 .sideNav{
     border-right: 1px solid green;
     padding: 20px;
     border-radius: 0;
+    box-shadow: 0 .5rem 1rem rgba(0,0,0,.03);
+    
+}
+.sideNav>.sideNavData{
+    position: fixed;
+    width: 100%;
+}
+
+.sideNav,.content{
+    margin-top: 95px;
 }
 
 .content{
@@ -34,6 +55,7 @@
     padding: 10px 140px;
 }
 
+/* ================== Start Up Part In Content ================ */
 .up{
     grid-column: 1/3;
     background-color: #FFFFFF;
@@ -58,22 +80,385 @@
     border-top: 1px solid #f1f1f1;
 }
 
-.left,.right{
-    background-color: #FFFFFF;
-    padding: 40px;
-    box-shadow: 0 8px 30px rgba(0,0,0,.05)
+.user{
+    /* position: relative; */
+    display: flex;
+    justify-content: space-between;
 }
 
-.right,.left{
+.userImgName>.Uimg>img{
+    width: 100px;
+    margin-top:-40px ;
+    position: absolute;
+    margin-left: 30px;
+    background-color: #fff;
+    border: 5px solid white;
+    border-radius: 50%;
+}
+
+.userImgName>h4{
+    margin-bottom: 3rem;
+    margin-top: .5rem;
+    padding-left: 150px;
+    display: block;
+    font-weight: 700;
+    word-wrap: break-word;
+    font-size: 20px;
+}
+
+.userImgName>h4>span{
+    font-weight: 500;
+    color: grey;
+    display:block;
+    line-height: 1.2rem;
+    font-size: 12px;
+}
+
+.user>.RightItems{
+    margin-right: 25px;
+    margin-bottom: 3rem;
+    margin-top: .5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.user>.RightItems>a{
+    border-radius: .3rem;
+    margin-right: .5rem;
+    background-color: #f7f7f7;
+    padding: .7rem;
+}
+
+.user>.RightItems>a>img{
+    width: 25px;
+}
+
+.user>.RightItems>#addFriend{
+    background-color: #10d876;
+    color: #fff;
+    padding: 1rem;
+    text-decoration: none;
+}
+
+.up>.nav>ul>li{
+    list-style: none;
+    font-weight: 600;
+    font-size: 12px;
+    display: inline-block;
+    margin-right: 40px;
+}
+
+.up>.nav>ul>li>a{
+    text-decoration: none;
+    padding-bottom: 1rem;
+    padding-top: 1rem;
+    color: black;
+    border-radius: 0;
+}
+
+.up>.nav>ul>li>a:not(.active){
+    color: #adb5bd;
+}
+
+.up>.nav>ul>li>.active{
+    border-bottom: 2px solid black;
+}
+
+.up>.nav>ul>li>a:hover{
+    color: black;
+}
+
+.up>.nav>ul>.active{
+    border-bottom: 2px solid black;
+}
+/* ================== End Up Part In Content ================ */
+
+
+/* ================== Start Left Part In Content ================ */
+.left{
     display: grid;
-    grid-template-rows: 300px;
+    grid-template-rows: 100px 300px 300px 300px;
     gap: 15px;
     box-shadow: 0 8px 30px rgba(0,0,0,.05)
 }
 
 .right>.post,.left>.data{
     background-color: #FFFFFF;
-    padding: 40px;
+    padding: 15px;
     box-shadow: 0 8px 30px rgba(0,0,0,.05)
 }
+.left,.right{
+    background-color: #FFFFFF;
+    padding: 15px;
+    box-shadow: 0 8px 30px rgba(0,0,0,.05)
+}
+/* ================== End Left Part In Content ================ */
+
+
+/* ================== Start Right Part In Content ================ */
+/* ================== Start Create Post ================ */
+.right{
+    display: grid;
+    grid-template-rows: 300px 1ref 300px 300px;
+    gap: 15px;
+    box-shadow: 0 8px 30px rgba(0,0,0,.05)
+}
+
+.right>.post{
+    display: grid;
+    grid-template-rows: 1ref 3ref 1ref;
+}
+
+.right>.post>.a{
+    height: 30px;
+    margin-bottom: 10px;
+}
+
+.right>.post>.a>a{
+    color: grey;
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 12px;
+}
+
+.right>.post>.a>a>img{
+    width:20px;
+    border-radius: 0;
+    background-color:#ededed;
+    border-radius: 50%;
+    padding: .5rem;
+    margin-right: 10px;
+}
+
+.right>.post>.textbox>img{
+    width: 30px;
+    position: absolute;
+    margin:7px;
+}
+.right>.post>.textbox{
+    height: 170px;
+}
+.right>.post>.textbox>textarea{
+    color: #adb5bd;
+    width: 99%;
+    height: 100%;
+    text-indent: 40px;
+    padding-top: 10px;
+    line-height: 1.5;
+    font-size: 15px;
+}
+
+
+.right>.post>.btns{
+    display: flex;
+    justify-content: space-between;
+    justify-items: center;
+    border-radius: 0;
+    font-size: 12px;
+    font-weight: 600;
+    color: rgb(84, 81, 81);
+    height: 30px;
+    margin-top: 20px;
+}
+
+.right>.post>.btns>.leftBtns{
+    width: 380px;
+}
+
+.right>.post>.btns>.rightBtns{
+    /* width: 50px; */
+    display: flex;
+    justify-content: center;
+    justify-items: center;
+    background-color: #f5f5f5;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+}
+.right>.post>.btns>.rightBtns>a>img{
+    width: 100%;
+    border-radius: 0;
+}
+
+
+.right>.post>.btns>.leftBtns{
+    display: flex;
+    justify-content: space-between;
+    padding-left: 0;
+}
+
+.right>.post>.btns>.leftBtns>.live{
+    padding-top: 10px;
+}
+
+.right>.post>.btns>.leftBtns>.live>a{
+    text-decoration: none;
+    color: rgb(84, 81, 81);
+    display: flex;
+    
+    font-size: 12px;
+}
+.right>.post>.btns>.leftBtns>.live>a>img{
+    border-radius: 0;
+    margin-right: .5rem;
+    width: 25px;
+}
+
+
+.right>.post>.btns>.leftBtns>.live>a>span{
+    padding-top: 5px;
+    vertical-align: middle;
+}
+/* ================== End Create Post ================ */
+
+
+/* ====================== Start Users Posts ========================== */
+/* ================== Start Post Owner ================ */
+.post>.userPost{
+    display: grid;
+    grid-template-columns: 80px 6ref 80px;
+    /* gap: 15px; */
+}
+
+.postOwner{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    justify-items: center;
+}
+
+.postOwner>.postLeft>a{
+    display: flex;
+    flex-direction: row;
+    height: 50px;
+}
+
+.postOwner>.postLeft>a>img{
+    background-color: #fff;
+    width: 45px;
+    height: 45px;
+}
+
+.postOwner>.postLeft>a>h4{
+    font-size: 12px;
+    margin-left: 10px;
+    margin-top: .25rem;
+    line-height: 1.7;
+}
+
+.postOwner>.postLeft>a>h4>span{
+    font-size: 10px;
+    color: rgb(160, 158, 158);
+    display: block;
+}
+
+
+.postOwner>.postRight>a{
+    display: flex;
+    flex-direction: row;
+    /* height: 50px; */
+}
+
+.postOwner>.postRight>a>.dotsBtn{
+    display: flex;
+    justify-content: center;
+    justify-items: center;
+    background-color: #f5f5f5;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+}
+.postOwner>.postRight>a>.dotsBtn>img{
+    width: 100%;
+    border-radius: 0;
+}
+/* ================== End Post Owner =================== */
+
+
+/* ================== Start Post Data ================ */
+.postData>.text{
+    width: 95%;
+    padding-top: 0;
+}
+
+.postData>.media,.postData>.media>.extra{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 5px;
+}
+
+.postData>.media>a{
+    width: 32.5%;
+    border-radius: 10px;
+}
+.postData>.media>.extra>a{
+    width: 49.2%;
+    border-radius: 10px;
+}
+
+.postData>.media>a>img,.postData>.media>.extra>a>img{
+    width: 100%;
+}
+/* ================== End Post Data =================== */
+
+
+/* ================== Start Post React ================ */
+.react{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    font-size: 12px;
+    font-weight: 600;
+    border-radius: 0;
+}
+
+.reactLeft>.Like>a,.reactLeft.comment>a,.reactRight>a{
+    height: 25px;
+}
+
+.Like>a>img,.comment>a>img,.reactRight>a>img{
+    width: 25px;
+    height: 25px;
+}
+
+.react>.reactLeft>.Like{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+    height: 25px;
+}
+
+.react>.reactLeft>.comment{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+    height: 25px;
+}
+
+.react>.reactLeft{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 40px;
+    height: 25px;
+}
+
+.react>.reactRight{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+    height: 25px;
+    font-size: 12px;
+}
+
+/* ================== End Post React ================ */
+/* ================== End Right Part In Content ================ */
+
+
 
