--- a/css/layouts/header.css
+++ b/css/layouts/header.css
@@ -1,20 +1,31 @@
-body{
-    margin:0 ;
+body {
+    margin: 0;
 }
 
 header {
-    height: 100px;
     position: fixed;
-    width:100%;
-    background-color:#fff;
+    width: 100%;
+    background-color: #fff;
+    top: 0;
 }
 
 header .container {
-    display: flex;
-    justify-content: space-between;
     align-items: center;
     position: relative;
     padding-top: 10px;
+    display: flex;
+    justify-content: space-between;
+}
+
+nav>ul {
+    float: left;
+    align-items: center;
+}
+
+nav>ul:nth-of-type(2) {
+    float: right;
+    display: flex;
+    align-items: center;
 }
 
 header .logo img {
@@ -24,26 +35,26 @@ header .logo img {
 
 header nav {
     flex: 1;
-    display: flex;
     align-items: center;
     justify-content: flex-end;
 }
 
 header nav ul {
-    display: flex;
     list-style-type: none;
     margin-top: 10px;
 }
 
 ul li {
-    display: block;
+    display: inline-block;
     padding: 0 10px;
 }
+
 .sec-section {
     padding-left: 150px;
-    
+
 }
-.last-sec-section{
+
+.last-sec-section {
     padding-right: 20px;
 }
 
@@ -56,7 +67,7 @@ input::placeholder {
     padding-left: 15px;
 }
 
-input{
+input {
     background-color: #d0cccc;
     border-radius: 25px;
     height: 30px;
@@ -77,10 +88,13 @@ header nav .form i {
 
 .section-one {
     top: 50%;
-    transform: translateY(15%);
+    /* transform: translateY(4%); */
 }
-  
-.sec-section, .sec-section-two, .sec-section-last {
+
+.sec-section,
+.sec-section-two,
+.sec-section-last {
     top: 50%;
-    transform: translateY(25%);
+    display: flex;
+    align-items: center;
 }
