--- a/css/profile.css
+++ b/css/profile.css
@@ -28,7 +28,7 @@ a{
     height: 95px;
     position: fixed;
     width: 100%;
-    box-shadow: 0 .5rem 1rem rgba(0,0,0,.03)
+    box-shadow: 0 .5rem 1rem rgba(0,0,0,.03);
 }
 
 .sideNav{
@@ -86,10 +86,14 @@ a{
     justify-content: space-between;
 }
 
+.userImgName{
+    display: flex;
+    flex-direction: row;
+}
+
 .userImgName>.Uimg>img{
     width: 100px;
     margin-top:-40px ;
-    position: absolute;
     margin-left: 30px;
     background-color: #fff;
     border: 5px solid white;
@@ -99,7 +103,7 @@ a{
 .userImgName>h4{
     margin-bottom: 3rem;
     margin-top: .5rem;
-    padding-left: 150px;
+    padding-left: 15px;
     display: block;
     font-weight: 700;
     word-wrap: break-word;
@@ -175,27 +179,6 @@ a{
 /* ================== End Up Part In Content ================ */
 
 
-/* ================== Start Left Part In Content ================ */
-.left{
-    display: grid;
-    grid-template-rows: 100px 300px 300px 300px;
-    gap: 15px;
-    box-shadow: 0 8px 30px rgba(0,0,0,.05)
-}
-
-.right>.post,.left>.data{
-    background-color: #FFFFFF;
-    padding: 15px;
-    box-shadow: 0 8px 30px rgba(0,0,0,.05)
-}
-.left,.right{
-    background-color: #FFFFFF;
-    padding: 15px;
-    box-shadow: 0 8px 30px rgba(0,0,0,.05)
-}
-/* ================== End Left Part In Content ================ */
-
-
 /* ================== Start Right Part In Content ================ */
 /* ================== Start Create Post ================ */
 .right{
@@ -220,6 +203,9 @@ a{
     text-decoration: none;
     font-weight: 600;
     font-size: 12px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
 .right>.post>.a>a>img{
@@ -231,22 +217,29 @@ a{
     margin-right: 10px;
 }
 
+
+.right>.post>.textbox{
+    height: 100px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    border: 1px solid rgba(0,0,0,.125);
+}
+ 
 .right>.post>.textbox>img{
     width: 30px;
-    position: absolute;
+    height: 30px;
     margin:7px;
 }
-.right>.post>.textbox{
-    height: 170px;
-}
+
 .right>.post>.textbox>textarea{
     color: #adb5bd;
-    width: 99%;
-    height: 100%;
-    text-indent: 40px;
+    width: 100%;
+    /* height: 100%; */
     padding-top: 10px;
     line-height: 1.5;
     font-size: 15px;
+    border: none;
 }
 
 
@@ -462,3 +455,125 @@ a{
 
 
 
+/* ================== Start Left Part In Content ================ */
+.left{
+    display: grid;
+    grid-template-rows: 100px 460px 500px 300px;
+    gap: 15px;
+    box-shadow: 0 8px 30px rgba(0,0,0,.05)
+}
+
+.right>.post,.left>.data{
+    background-color: #FFFFFF;
+    padding: 15px;
+    box-shadow: 0 8px 30px rgba(0,0,0,.05)
+}
+.left,.right{
+    background-color: #FFFFFF;
+    padding: 15px;
+    box-shadow: 0 8px 30px rgba(0,0,0,.05)
+}
+
+
+/* ============== First Div =============== */
+.left>.data>.one{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.left>.data>.one>.roundDiv{
+    border: 6px solid #10d876;
+    border-radius: 50%;
+    padding: .75rem;
+    margin-right: 15px;
+}
+
+.left>.data>.one>.roundDiv>span{
+    font-size: 15px;
+    font-weight: 600;
+    color: #515184;
+}
+
+.left>.data>.one>.text>h5>span{
+    color: #adb5bd;
+    font-size: 12px;
+    line-height: 1.7;
+}
+/* =============== End First Div ============== */
+
+/* =============== Start Second Div ============== */
+.left>.data>.about>p{
+    font-size: 12px;
+    color: #adb5bd;
+    line-height: 1.9;
+}
+
+.left>.data>.settingInfo{
+    border-top: 1px solid #adb5bd;
+    border-radius: 0;
+}
+
+.settingInfo>.setting{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.settingInfo>.setting>img{
+    padding-right: 10px;
+    width: 27px;
+    margin-left: 0;
+}
+
+.settingInfo>.setting>h5{
+    font-size: 12px;
+}
+.settingInfo>.setting>h5>span{
+    color: #adb5bd;
+    display: block;
+    font-size: 10;
+    line-height: 1.2;
+}
+
+/* =============== End Second Div ============== */
+
+
+/* =============== Start Third Div ============== */
+.data>.title{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.data>.photos{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 7px;
+    padding-bottom: 10px;
+}
+.data>.photos>a{
+    width: 48%;
+}
+
+.data>.photos>a>img{
+    width: 100%;
+    border-radius: 5px;
+}
+
+
+.data>.link>a{
+    background-color: #f7f7f7;
+    padding: .7rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content:center;
+}
+
+/* =============== End Third Div ============== */
+
+
+
+/* ================== End Left Part In Content ================ */
